@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

Package Model <<Rectangle>>{
Class "<<interface>>\nReadOnlyAddressBook" as ReadOnlyAddressBook
Class "<<interface>>\nReadOnlyUserPrefs" as ReadOnlyUserPrefs
Class "<<interface>>\nModel" as Model
Class AddressBook
Class ModelManager
Class UserPrefs

Class UniqueClientList
Class Client
Class Address
Class Plan
Class Email
Class Name
Class Phone
Class Tag
Class Procedure
class Information
class Cost
class Completion
class Date
}

Class HiddenOutside #FFFFFF
HiddenOutside ..> Model

AddressBook .up.|> ReadOnlyAddressBook

ModelManager .up.|> Model
Model .right.> ReadOnlyUserPrefs
Model .left.> ReadOnlyAddressBook
ModelManager -left-> "1" AddressBook
ModelManager -right-> "1" UserPrefs
UserPrefs .up.|> ReadOnlyUserPrefs

AddressBook *--> "1" UniqueClientList
UniqueClientList --> "~* all" Client
Client *--> Name
Client *--> Phone
Client *--> Email
Client *--> Plan
Client *--> Address
Client *--> "*" Tag
Client *--> "*" Procedure

Procedure *--> Information
Procedure *--> Cost
Procedure *--> Date
Procedure *--> Completion

Name -[hidden]right-> Phone
Phone -[hidden]right-> Address
Address -[hidden]right-> Email

ModelManager -->"~* filtered" Client
@enduml
